UPC-11 Support authentication in HTTP URL